force-app/main/default/objects/Bypass__c/fields/Disable_CF__c.field-meta.xml
<CustomField>
    <fullName>Disable_CF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Custom Flows</label>
    <type>Checkbox</type>
</CustomField>