force-app/main/default/objects/Bypass__c/fields/Disable_PB__c.field-meta.xml
<CustomField>
    <fullName>Disable_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Process Builder</label>
    <type>Checkbox</type>
</CustomField>