force-app/main/default/objects/Bypass__c/fields/Disable_VR__c.field-meta.xml
<CustomField>
    <fullName>Disable_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rule</label>
    <type>Checkbox</type>
</CustomField>