force-app/main/default/objects/Bypass__c/fields/Disable_WF__c.field-meta.xml
<CustomField>
    <fullName>Disable_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Workflow</label>
    <type>Checkbox</type>
</CustomField>